Corrige rutas de gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /target/
-/com.vaadin.designer.prefs
-/designer-theme.css
+/.settings/com.vaadin.designer.prefs
+/.vaadin-designer2/designer-theme.css
