--- a/.settings/com.vaadin.integration.eclipse.prefs
+++ b/.settings/com.vaadin.integration.eclipse.prefs
@@ -1,2 +1,2 @@
-com.vaadin.integration.eclipse.mavenLatestVersionsUpgrade=["8.3.3"]
+com.vaadin.integration.eclipse.mavenLatestVersionsUpgrade=["8.3.3","8.4.0"]
 eclipse.preferences.version=1
