Se añade recuperar contraseña por correo

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,15 @@
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-themes</artifactId>
 		</dependency>
+		
+	
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-email</artifactId>
+    <version>1.4</version>
+</dependency>
+		
 	</dependencies>
 
 	<build>
